--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,23 @@
-
 /* Your CSS Code here. */
+.div1{
+	background: red;
+	width: 100px;
+	height: 100px;
+}
+
+.div2{
+	background: blue;
+	width: 100px;
+	height: 100px;
+}
+
+.div3{
+	background: green;
+	width: 100px;
+	height: 100px;
+}
+
+.holder{
+	display: flex;
+	justify-content: space-between
+}
